# ghtrending.nvim

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yaml
crates/ghtrending/: Cargo.toml
crates/ghtrending/src/: lib.rs
crates/ghtrending/src/util/: file.rs
crates/ghtrending/tests/: test_cache.rs  test_parse_html.rs  test_process.rs
crates/ghtrending_nvim/: Cargo.toml  ReadMe.md
crates/ghtrending_nvim/src/: lib.rs
crates/ghtrending_nvim/src/util/: file.rs
crates/ghtrending_nvim/tests/: parse_html_test.rs  path_test.rs  str_test.rs
ghtrending/: Cargo.toml  ReadMe.md
ghtrending/src/: lib.rs
ghtrending/src/util/: file.rs  mod.rs
ghtrending/tests/: test_lua_state.rs  test_path.rs  test_str.rs
lua/gh/: rust.lua
lua/ghtrending/: config.lua  init.lua
lua/tests/: ghtrending_spec.lua
plugin/: ghtrending_nvim.lua
src/: lib.rs
