[package]
authors = ["herschelma666@gmail.com"]
edition = "2021"
name = "ghtrending_nvim"
version = "0.1.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
ghtrending = { path = "ghtrending", version = "0.1.2" }
mlua = { version = "0.9.4", features = [
  "luajit",
  "module",
  "async",
  "send",
  "serialize",
  "serde",
  "macros",
] }
