[package]
name = "ghtrending"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.22"
scraper = "0.18.1"
serde = { version = "1.0.9", features = ["derive"] }
serde_json = "1.0.108"
futures = "0.3"
tokio = { version = "1.35.0", features = ["full"] }
tokio-serde = { version = "0.8.0", features = [
  "serde_json",
  "bincode",
  "json",
  "bincode",
] }
tokio-util = { version = "0.7.10", features = ["codec"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
mlua = { version = "0.9.4", features = [
  "luajit",
  "module",
  "async",
  "send",
  "serde",
  "serialize",
  'macros',
] }
