[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[package]
name = "ghtrending_nvim"
edition = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[dependencies]
reqwest = { workspace = true }
scraper = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-serde = { workspace = true, features = [
  "serde_json",
  "bincode",
  "json",
  "bincode",
] }
tokio-util = { workspace = true, features = ["codec"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
mlua = { workspace = true, features = [
  "luajit",
  "module",
  "async",
  "send",
  "serde",
  "serialize",
  'macros',
] }
